# webshot

./: Cargo.toml  Dockerfile  LICENSE  README.md  makefile
.github/workflows/: docker-image.yml
cli/: Cargo.toml
cli/src/: main.rs
service/: Cargo.toml
service/src/: main.rs
web_shot/: Cargo.toml
web_shot/src/: lib.rs  web_shot.rs
