[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
web_shot = { path = "../web_shot" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
validator = { version = "0.18.1", features = ["derive"] }
aws-config = "1.2.0"
aws-sdk-s3 = "1.23.0"
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["v4"] }
